<resources>
    <string name="app_name">SamTour</string>
    <string name="settings">Settings</string>
    <string name="download">Download</string>
    <string name="hotels">Hotels</string>
    <string name="attractions">Attractions</string>
    <string name="foodanddrinks">Food and Drinks</string>
    <string name="shopping">Shopping</string>
    <string name="new_update">New update</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_later">Later</string>
    <string name="btn_done">Done</string>
    <string name="btn_guide_me">Guide Me here</string>
    <string name="update_alert">New update available! Would you like to download?</string>
    <string name="update_nothing">There is no update</string>
    <string name="reviews">Reviews</string>
    <string name="address">Address</string>
    <string name="search_hint">Search</string>
    <string name="Err_wrong_geojson_file">Error! Malformed JSON in the geojson file. Go to the setting, Try re-download</string>
    <string name="Err_file_not_found">Error! File not found. Go to the setting, Try re-download</string>
    <string name="Err_wrong_itinerary_file">Error! wrong feature name in the itinerary file</string>
    <string name="Err_network_state">The state of network is not good</string>
    <string name="Err_no_connection">There is no Internet connection</string>
    <string name="Err_not_supported">Not supported in this language</string>
    <string name="dialog_update_available">Now recent tour information is available!
        \nDo you want to update? But if you are not connected to Wi-Fi, the cost of data usage would be high.</string>
    <string name="dialog_load_features">Loading Tour Data</string>
    <string name="dialog_check_update">Checking New Update</string>
    <string name="dialog_gps_setting">To guide you to the destination from where your are, please turn on GPS.\nDo you want to turn on?</string>
    <string name="dialog_need_map_download">To see map background, first time, you need to download map file from server
        \nDo you want to download? But if you are not connected to Wi-Fi, the cost of data usage would be high.</string>
    <string name="select_your_language">Please select your language</string>
    <string name="wizard_day_select">How many days are you staying in Samarkand?</string>
    <string name="wizard_course_select">Please decide the priority of your favorite courses</string>
    <string name="title_dialog_gps_setting">Location Based Service</string>
    <string name="title_dialog_update_available">Update available</string>
    <string name="title_dialog_map_download">Map Download</string>
    <string name="title_itinerary_wizard">Itinerary Wizard</string>
    <string name="title_about_this_app">About this App</string>
    <string name="title_check_new_update">Check new update</string>
    <string name="title_language_selection">Language Selection</string>
    <string name="title_suggested_itinerary">Suggested Itinerary</string>
    <string name="toast_select_destination">First select a marker and press the Guide Me button</string>
    <string name="toast_wait_for_gps">Please wait for catching the GPS signal</string>
    <string name="toast_navi_finding">Start to find the distance and direction</string>
    <string name="marquee_searching_you">Searching your location...</string>
    <string name="marquee_searching_target">"Searching the distance and direction of "</string>
    <string name="marquee_guiding">"Guiding to "</string>
    <string name="marquee_arrival_noti">Now you are around the target destination</string>
    <string name="marquee_greeting">Welcome to Samarkand!</string>
    <string name="Warn_weak_gps_signal">Weak GPS signal! Move to open space where the sky is seen</string>
    <string name="notify_download_complete">Download Complete</string>
    <string name="notify_updatable">When restarted, the update will be applied</string>
    <string name="suggested_itinerary">Suggested Itinerary</string>
    <string name="itinerary_select_day">Select your stay period</string>
    <string name="itinerary_1st_course">Choose 1st Course</string>
    <string name="itinerary_2nd_course">Choose 2nd Course</string>
    <string name="itinerary_3rd_course">Choose 3rd Course</string>
    <string name="itinerary_4th_course">Choose 4th Course</string>
    <string name="itinerary_5th_course">Choose 5th Course</string>
    <string name="itinerary_6th_course">Choose 6th Course</string>
    <string name="itinerary_day">" Day"</string>
    <string name="itinerary_mixed">Mixed Course</string>
    <string name="itinerary_nightlifenpark">Nightlife and Park Course</string>
    <string name="itinerary_shopping">Shopping Course</string>
    <string name="itinerary_traditionalhandmade">Traditional Handmade Course</string>
    <string name="itinerary_museum">Museum Course</string>
    <string name="itinerary_religion">Religion Course</string>
    <string name="itinerary_overlap">"! When each course merged in order,\nduplication Not allowed"</string>
    <string name="itinerary_pick_day">Select your itinerary day</string>
    <string name="itinerary_already_exist">Already in your itinerary</string>
    <string name="itinerary_added_successfully">Successfully added to your itinerary</string>
    <string name="prop_addr">Address</string>
    <string name="prop_price">Price</string>
    <string name="prop_open">Open</string>
    <string name="sort_by_title">Sort by Name</string>
    <string name="sort_by_mylocation">Sort by My Loc</string>
    <string name="pref_header_about">About App</string>
    <string name="pref_header_data_sync">Check new update</string>
    <string name="pref_summary_data_sync">Check if the recent tour data is in the server</string>
    <string name="pref_title_update_on_boot">Check the update on boot</string>
    <string name="pref_title_now_update">Now Update</string>
    <string name="pref_header_notifications">Target arrival notification</string>
    <string name="pref_summary_notifications">When arrived near target destination, notify it by vibrate</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_languages">Languages</string>
    <string name="setting_about_app">"        This is the cooperation project of universities in Samarkand of which the center is a UNESCO world Heritage Site.
        We're targeting to provide unknown, hidden and unique all tour information for your visit.
        We're also suggesting recommended itineraries for your great experience at this city. Of course, you can create your own customized itinerary based on the recommendation.
        Furthermore, because it's designed for offline usage, even though you don't have any Internet connection on your way, you can utilize all information and it will guide you safely to the destination by GPS."</string>
    <string name="title_activity_tour_feature">TourFeatureActivity</string>
    <string name="tour_feature_content">
        "%1$s\n\n"
        "Address:\n\n"
        "%2$s\n\n"
        "Price:\n\n"
        "%3$s\n\n"
        "Open:\n\n"
        "%4$s\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_itinerary">MyItinerary</string>
</resources>