<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="uz.samtuit.samapp.main.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about" />

    <header
        android:fragment="uz.samtuit.samapp.main.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:summary="@string/pref_summary_notifications"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="uz.samtuit.samapp.main.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:summary="@string/pref_summary_data_sync"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="uz.samtuit.samapp.main.SettingsActivity$LanguagesPreferenceFragment"
        android:icon="@drawable/ic_language"
        android:title="@string/pref_header_languages" />

</preference-headers>
