<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uz.samtuit.samapp.main.WizardDaySelectActivity"
    android:background="@drawable/logo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_itinerary_wizard"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="#33ff0000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wizard_course_select"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:background="@color/primary_dark_material_light"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseSpinner1"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ColorPrimary"
        android:prompt="@string/itinerary_1st_course"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseSpinner2"
        android:layout_below="@+id/courseSpinner1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ColorPrimary"
        android:prompt="@string/itinerary_2nd_course"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseSpinner3"
        android:layout_below="@+id/courseSpinner2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ColorPrimary"
        android:prompt="@string/itinerary_3rd_course"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseSpinner4"
        android:layout_below="@+id/courseSpinner3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ColorPrimary"
        android:prompt="@string/itinerary_4th_course"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseSpinner5"
        android:layout_below="@+id/courseSpinner4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ColorPrimary"
        android:prompt="@string/itinerary_5th_course"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_previous"
        android:id="@+id/button2"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onPreviousBtnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:onClick="onDoneBtnClick"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_later"
        android:id="@+id/button"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onSkipBtnClick" />

</RelativeLayout>
