<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/hotels_picker"
        android:elevation="2dp"
        android:background="@drawable/layout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hotel_primary"
        android:layout_marginBottom="2dp"
        android:textAllCaps="false"
        android:text="@string/hotels"
        />
    <Button
        android:id="@+id/food_picker"
        android:background="@drawable/layout_bg"
        android:elevation="2dp"
        android:layout_below="@id/hotels_picker"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"
        android:textColor="@color/foodanddrink_primary"
        android:textAllCaps="false"
        android:text="@string/foodanddrinks"
        />
    <Button
        android:id="@+id/attraction_picker"
        android:background="@drawable/layout_bg"
        android:elevation="2dp"
        android:layout_below="@id/food_picker"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/attraction_primary"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/attractions"
        />
    <Button
        android:id="@+id/shop_picker"
        android:background="@drawable/layout_bg"
        android:elevation="2dp"
        android:layout_below="@id/attraction_picker"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:textColor="@color/shop_primary"
        android:textAllCaps="false"
        android:text="@string/shopping"
        />

</RelativeLayout>