<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uz.samtuit.samapp.main.WizardDaySelectActivity"
    android:background="@color/wizardBackground">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_itinerary_wizard"
        android:id="@+id/tf_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wizard_day_select"
        android:id="@+id/notice"
        android:layout_below="@+id/tf_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daySpinner1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:popupBackground="@color/wizardBackgroundLight"
        android:prompt="@string/itinerary_select_day"
        android:spinnerMode="dropdown" />
    <Button
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_later"
        android:textAllCaps="false"
        android:id="@+id/btnPrev"
        android:textColor="@color/wizardBackground"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onLaterBtnClick" />
    <Button
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:textAllCaps="false"
        android:textColor="@color/wizardBackground"
        android:id="@+id/button3"
        android:elevation="4dp"
        android:layout_alignBottom="@+id/btnPrev"
        android:layout_marginRight="16dp"
        android:layout_alignRight="@+id/daySpinner1"
        android:onClick="onNextBtnClick" />
</RelativeLayout>
